# FastEdge-examples

./: .gitignore  README.md  package-lock.json
assemblyscript/: .gitignore  README.md  asconfig.json  package-lock.json  package.json
assemblyscript/assembly/body/: README.md  index.ts
assemblyscript/assembly/geoBlock/: README.md  index.ts
assemblyscript/assembly/geoRedirect/: README.md  index.ts
assemblyscript/assembly/headers/: README.md  index..ts  index.ts
github-actions/: README.md
github-actions/multi-app-workflows/: .gitignore  README.md  package.json
github-actions/single-app-workflows/: README.md  package-lock.json  package.json
javascript/: .gitignore  README.md  package-lock.json  package.json
javascript/scripts/: build.js  serve-wasm.js
rust/: Cargo.toml  README.md
rust/cdn/convert_image/: Cargo.toml
rust/cdn/custom_error_pages/: .prettierrc  Cargo.toml  README.md  build.rs  custom_error_pages.rs  package-lock.json  package.json  tailwind.css
rust/cdn/custom_error_pages/public/: styles.css
rust/cdn/custom_error_pages/templates/: error_page.hbs
rust/cdn/geoblock/: Cargo.toml  README.md
rust/cdn/http_call/: Cargo.toml  README.md
rust/cdn/http_call/src/: lib.rs
rust/cdn/jwt/: Cargo.toml  README.md  jwt.rs
rust/cdn/md2html/: Cargo.toml  README.md  lib.rs
rust/http/fetch/: Cargo.toml
rust/http/fetch/src/: lib.rs
rust/http/kv-store/: Cargo.toml  README.md  main.rs
rust/http/markdown/: Cargo.toml
rust/http/print/: Cargo.toml  main.rs
rust/http/s3upload/: Cargo.toml  README.md
rust/http/smart-switch/: Cargo.toml
(+80 files in other folders)
