[workspace]
members = [ "cdn/*", "http/*" ]
resolver = "2"

[workspace.dependencies]
fastedge = "0.3.1"
proxy-wasm = "0.2.4"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
description = "FastEdge Rust examples"
repository = "https://github.com/G-Core/FastEdge-examples.git"
authors = ["FastEdge Development Team <fastedge@gcore.com>"]

